sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var n= getNombreValeurs()
	var a:Int=1;	
		while (h==false) {
			a=0;
			for (k <- 0 to n-2) {
				if (plusPetit(k+1,k)) {
					echange(k+1,k)
					a=a+1;
				} 
				}
			}
			}
			
		
	
		
